# SYNTHETIC-CODE-DETECTION-VIA-REWRITING-BASED-COMPARATIVE-ANALYSIS

./: .gitignore  pyproject.toml
data/: data._cleaner.ipynb
