[project]
name = "synthetic-code-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "Maulana Arya Alambana",email = "maulanaaryaw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch (>=2.9.0,<3.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "datasets (>=4.3.0,<5.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

